<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SAFETY_StatusFB_TO_RS" Id="{6071a81b-fb55-4442-8493-3a94bb1dac9e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_StatusFB_TO_RS : ST_SAFETY_FBRS
VAR_INPUT
	stFBStatus						: ST_SAFETY_FBStatus; 	(* Struktura ogolna *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SAFETY_StatusFB_TO_RS.uStatus.stStatusWords 		:= stFBStatus;									(* Przepisanie *)
F_SAFETY_StatusFB_TO_RS.eState					 	:= stFBStatus.BState;							(* Ustawienie enum *)]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_StatusFB_TO_RS">
      <LineId Id="3" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>